# gfx-ssl-sdk

./: .gitignore  Anchor.toml  Cargo.toml  Makefile.toml  README.md  config_set_local.sh  dump_programs.sh
cli/: Cargo.toml
cli/src/: config.rs  lib.rs
cli/src/interface/: controller.rs  mod.rs  ssl.rs
dump/: README.md
js/: package-lock.json  package.json
js/src/: index.ts  layout.ts
js/src/idl/: gfx_controller_idl.json  gfx_ssl_idl.json
js/src/states/: controller.ts  index.ts  liquidityAccount.ts  pair.ts  ssl.ts  stakingAccount.ts
localnet/: Cargo.toml  README.md
localnet/src/: main.rs
programs/gfx-controller/: Cargo.toml
programs/gfx-controller/src/: errors.rs  lib.rs  utils.rs
programs/gfx-controller/src/contexts/: create_controller.rs  create_staking_account.rs  mod.rs  stake.rs  unstake.rs
programs/gfx-controller/src/states/: controller.rs  mod.rs  staking_account.rs
programs/gfx-ssl/: Cargo.toml
programs/gfx-ssl/src/: errors.rs  lib.rs  svec.rs  svec4.rs  svec5.rs  utils.rs
programs/gfx-ssl/src/contexts/: burn_pt.rs  create_liquidity_account.rs  deposit.rs  mint_pt.rs  mod.rs  preswap.rs  rebalance_swap.rs  swap.rs  withdraw.rs
programs/gfx-ssl/src/states/: liquidity_account.rs  mod.rs  pair.rs  pt_mint.rs  ssl.rs
programs/gfx-ssl/src/states/ssl/: mod.rs  swap_cache.rs
programs/gfx-ssl/tests/: pair_layout.rs  pair_layout_wasm.rs
sdk/: Cargo.toml  README.md  build.rs
sdk/benches/: quote_fn.rs
sdk/examples/: jupiter.rs  mem_test.rs
sdk/src/: avec.rs  error.rs  jupiter.rs  lib.rs  utils.rs
sdk/src/controller/: instructions.rs  mod.rs  state.rs
sdk/src/ssl/: instructions.rs  mod.rs  state.rs
sdk/tests/: all_accounts_needed.rs  all_pairs.rs  sol_usdc_pair.rs
tests/: Test.toml  accounts.ts  controller  gfx_pair  mint.json  sol_usd_oracle  ssl_account_1  ssl_account_2  test_user_token_act.json  usdc_usd_oracle
ts/: README.md  jest.config.js  package-lock.json  package.json  test.js  tsconfig.json  webpack.config.js
ts/examples/: getSSLInfo.ts  quote.ts  swap.ts
ts/src/: index.ts  tsconfig.json
ts/src/constants/: ssl.ts  swap.ts
ts/src/idl/: gfx_controller_idl.json  gfx_ssl_idl.json
ts/src/layouts/: controller.ts  liquidityAccount.ts  pair.ts  ssl.ts  stakingAccount.ts
ts/src/public/: index.ts  ssl.ts  swap.ts  utils.ts
ts/src/states/: controller.ts  liquidityAccount.ts  pair.ts  ssl.ts  stakingAccount.ts
ts/src/wasm/: gfx_ssl_wasm.d.ts  gfx_ssl_wasm.js  gfx_ssl_wasm_bg.wasm  gfx_ssl_wasm_bg.wasm.d.ts  gfx_ssl_wasm_data.js  utils.ts
ts/test/: index.test.ts
