[package]
description = "High-level API for interacting with the `gfx-ssl` and `gfx-controller` programs"
edition = "2021"
name = "gfx-ssl-sdk"
version = "0.1.0"

[[bench]]
harness = false
name = "quote_fn"

[[example]]
name = "jupiter"

[features]
default = ["jupiter_amm"]
jupiter_amm = ["jupiter", "jupiter-core"]

[dependencies]
anchor-lang = "0.26"
anchor-spl = "0.26"
anyhow = "1.0.68"
gfx-controller-interface = {path = "../programs/gfx-controller", features = ["no-entrypoint"]}
gfx-ssl-interface = {path = "../programs/gfx-ssl", features = ["no-entrypoint"]}
jupiter = {git = "https://github.com/jup-ag/rust-amm-implementation", optional = true}
jupiter-core = {git = "https://github.com/jup-ag/rust-amm-implementation", optional = true}
lazy_static = "1.4.0"
pyth-sdk-solana = "0.7.0"
rust_decimal = "1.27.0"
solana-client = "1.14.12"
solana-program = "1.14.11"
solana-sdk = "1.14.11"
thiserror = "1.0.38"

[dev-dependencies]
criterion = "0.4.0"
itertools = "0.9"
