[package]
description = "Created with Anchor"
edition = "2021"
name = "gfx-controller-interface"
version = "0.1.2"

[lib]
crate-type = ["lib"]
name = "gfx_controller_interface"

[features]
cpi = ["no-entrypoint"]
default = []
dev = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.27"
anchor-spl = "0.27"
bytemuck = "1.13.1"
