[package]
description = "GFX SSl SDK"
edition = "2021"
name = "gfx-ssl-interface"
version = "0.1.0"

[lib]
crate-type = ["lib"]
name = "gfx_ssl_interface"

[features]
cli = []
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.26"
anchor-spl = "0.26"
type-layout = "0.2.0"
gfx_controller = {path = "../gfx-controller", package = "gfx-controller-interface", features = ["cpi"]}
solana-program = "1.14.11"
bytemuck = "1.13.0"
